# market-insight

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
dags/: daily_prices_dag.py  naver_discussion_dag.py  stock_listing_dag.py
docker/: init-db.sql
scripts/: init_db.py  test_crawl.py
src/market_insight/crawlers/: base.py  naver_discussion.py  naver_stock_listing.py  naver_theme.py  public_data_price.py
src/market_insight/storage/: postgres.py
src/market_insight/utils/: db_config.py  http_client.py
